# kraken-dlt-source

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
documentation/: kraken_api_reference.md
documentation/duckdb/: AGENTS.md
documentation/plans/: 000-initial_plan.md
pipelines/: __init__.py  run_pipeline.py
src/kraken_dlt_source/: __init__.py
src/kraken_dlt_source/common/: __init__.py
src/kraken_dlt_source/futures/: __init__.py  auth.py  client.py  helpers.py  resources.py
src/kraken_dlt_source/futures/resources/: __init__.py  account_log.py  executions.py  open_positions.py  position_history.py  tickers.py
tests/: test_auth.py  test_client.py  test_pipeline.py  test_resources.py
tests/fixtures/: account_log_page1.json  account_log_page2.json  executions_error.json  executions_page1.json  executions_page2.json  executions_permission_denied.json  open_positions.json  position_history_page1.json  tickers.json
